--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "blueexpress/custom-shipping",
     "description": "",
     "require": {
-        "php": "~7.2.0||~7.3.0",
+        "php": "~7.2.0||~7.3.0||~7.4.27||~7.5.0",
         "magento/framework": "102.0.*",
         "magento/module-backend": "101.0.*",
         "magento/module-catalog": "103.0.*",
