--- a/composer.json
+++ b/composer.json
@@ -4,15 +4,15 @@
     "require": {
         "php": "~7.2.0||~7.3.0||~7.4.27||~7.5.0",
         "magento/framework": "^102.0",
-        "magento/module-backend": "^101.0.*",
-        "magento/module-catalog": "^103.0.*",
-        "magento/module-config": "^101.1.*",
-        "magento/module-directory": "^100.3.*",
-        "magento/module-quote": "^101.1.*",
-        "magento/module-sales": "^102.0.*",
-        "magento/module-sales-rule": "^101.1.*",
-        "magento/module-shipping": "^100.3.*",
-        "magento/module-store": "^101.0.*"
+        "magento/module-backend": "^101.0",
+        "magento/module-catalog": "^103.0",
+        "magento/module-config": "^101.1",
+        "magento/module-directory": "^100.3",
+        "magento/module-quote": "^101.1",
+        "magento/module-sales": "^102.0",
+        "magento/module-sales-rule": "^101.1",
+        "magento/module-shipping": "^100.3",
+        "magento/module-store": "^101.0"
     },
     "type": "magento2-module",
     "license": [
